# -TwinMind---Digital-Personality-Twin-Application

./: .env.example  README.md  docker-compose.yml
app/: globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx
app/admin/: page.tsx
app/api/predict/: route.ts
app/api/quiz-analysis/: route.ts
app/api/simulate/: route.ts
app/auth/signin/: page.tsx
app/auth/signup/: page.tsx
app/dashboard/: page.tsx
app/profile/: page.tsx
app/quiz/: page.tsx
app/simulator/: page.tsx
app/twin-chat/: page.tsx
backend/: .env.example  Dockerfile  README.md  app.py  main.py  personality_model.py  pyproject.toml  requirements.txt
lib/: api.ts
scripts/: 01_create_schema.sql
